flux/apps/home1/n8n/n8n.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  parentRefs:
  - name: lab-gateway
    namespace: nginx-gateway
    sectionName: https
  hostnames:
  - "n8n.lab.lkwt.dev"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: n8n
      port: 80
